--- a/Страница.html
+++ b/Страница.html
@@ -71,7 +71,7 @@
                 <img src="https://yadi.sk/i/aj30ChnNXPE-tA/d/&dl=1" alt="фото 1">
             </div>
             <div class="gallery-item">
-                <img src="https://via.placeholder.com/600x400/33ff57/ffffff?text=Фото+2" alt="Фото 2">
+                <img src="Лес и Река.jpg" alt="Фото 2">
             </div>
             <div class="gallery-item">
                 <img src="https://via.placeholder.com/600x400/3357ff/ffffff?text=Фото+3" alt="Фото 3">
