--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
     <div class="gallery">
         <div class="gallery-container">
             <div class="gallery-item">
-                <img src="https://yadi.sk/i/aj30ChnNXPE-tA/d/&dl=1" alt="фото 1">
+                <img src="Лес.jpg" alt="фото 1">
             </div>
             <div class="gallery-item">
                 <img src="Лес и Река.jpg" alt="Фото 2">
             </div>
             <div class="gallery-item">
-                <img src="https://via.placeholder.com/600x400/3357ff/ffffff?text=Фото+3" alt="Фото 3">
+                <img src="Река.jpg" alt="Фото 3">
             </div>
         </div>
         
