--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Галерея с боковыми кнопками</title>
+    <title>Галерея</title>
     <style>
         .gallery-wrapper {
             display: flex;
             align-items: center;
-            width: 700px; /* Ширина фото + кнопок */
+            width: 100%; /* Ширина фото + кнопок */
             margin: 0 auto;
         }
         
@@ -30,8 +30,8 @@
         }
         
         .gallery-container {
-            width: 600px;
-            height: 400px;
+            width: 90%;
+            height: 800px;
             overflow: hidden;
             position: relative;
             border-radius: 8px;
@@ -71,13 +71,13 @@
         <div class="gallery-container">
             <div class="gallery-slides" id="slides">
                 <div class="gallery-slide">
-                    <img src="Лес.png" alt="Фото 1">
+                    <img src="Лес.jpg" alt="Фото 1">
                 </div>
                 <div class="gallery-slide">
-                    <img src="Река.png" alt="Фото 2">
+                    <img src="Река.jpg" alt="Фото 2">
                 </div>
                 <div class="gallery-slide">
-                    <img src="Лес и Река.png" alt="Фото 3">
+                    <img src="Лес и Река.jpg" alt="Фото 3">
                 </div>
             </div>
         </div>
