--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
         .gallery-wrapper {
             display: flex;
             align-items: center;
-            width: 100%; /* Ширина фото + кнопок */
-            margin: 0 auto;
+            width: 100%;
+            max-width: 1200px;
+            gap: 10px;
         }
         
         .gallery-btn {
@@ -30,7 +31,7 @@
         }
         
         .gallery-container {
-            width: 90%;
+            flex-grow: 1;
             height: 800px;
             overflow: hidden;
             position: relative;
