--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             display: flex;
             align-items: center;
             width: 100%;
-            max-width: 1200px;
+            max-width: 1;
             gap: 10px;
         }
         
